fix(style/global): fix button label being left aligned

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -106,6 +106,10 @@ button,
 	--font-weight: 800;
 	--font-contrast: 700;
 
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+
 	font-family: var(--font-family);
 	font-size: var(--button-fluid-size);
 
